<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/header"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValues"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/seven"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnSeven"/>

            <Button
                android:text="@string/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="numberClick"
                android:id="@+id/btnEight"
                />

            <Button
                android:text="@string/nine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnNine"/>

            <Button
                android:text="@string/divide"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="operationClick"
                android:id="@+id/btnDivide"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/four"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnFour"/>

            <Button
                android:text="@string/five"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnFive"/>

            <Button
                android:text="@string/six"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnSix"/>

            <Button
                android:text="@string/multiply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="operationClick"
                android:id="@+id/btnMultiply"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/one"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnOne"/>

            <Button
                android:text="@string/two"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnTwo"/>

            <Button
                android:text="@string/three"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnThree"/>

            <Button
                android:text="@string/minus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="operationClick"
                android:id="@+id/btnSubtract"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:text="@string/decimal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="decimalClick"
                android:id="@+id/btnDecimal"/>

            <Button
                android:text="@string/zero"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:id="@+id/btnZero"/>

            <Button
                android:text="@string/clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="clearClick"
                android:id="@+id/btnClear"/>

            <Button
                android:text="@string/plus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="operationClick"
                android:id="@+id/btnAdd"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:text="@string/equals"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:onClick="equalClick"
                android:id="@+id/btnEqual"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtValues"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="#efefef"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:maxLength="12"
        android:overScrollMode="ifContentScrolls"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>